Add the modal images

--- a/index.html
+++ b/index.html
@@ -14,23 +14,27 @@
     </header>
     <main class="base">
         <div class="container">
-            <div class="polaroid artemis">
+            <div class="modal" id="modal">
+                <span class="cerrar">X</span>
+                <img src="./assets/images/Fait.png" alt="" id="imgModal" class="modal-content">
+            </div>
+            <div id="artemis" class="polaroid artemis">
                 <img src="./assets/images/Artemis.png" alt="Artemis char">
                 <p>This is a nice Artemis</p>
             </div>
-            <div class="polaroid azoth">
+            <div id="azoth" class="polaroid azoth">
                 <img src="./assets/images/Azoth.png" alt="Azoth char">
                 <p>What about a ripper on steroids?</p>
             </div>
-            <div class="polaroid faith">
+            <div id="faith" class="polaroid faith">
                 <img src="./assets/images/Fait.png" alt="Fait char">
                 <p>A cool and cute witch</p>
             </div>
-            <div class="polaroid wu">
+            <div id="wu" class="polaroid wu">
                 <img src="./assets/images/Wu-Shang.png" alt="Wu char">
                 <p>A monk who doesn't wnat to be bothered</p>
             </div>
-            <div class="polaroid yumiko">
+            <div id="yumiko" class="polaroid yumiko">
                 <img src="./assets/images/Yumiko.png" alt="Yumiko">
                 <p>This is a pretty foxy legend</p>
             </div>
@@ -39,5 +43,6 @@
     <footer class="footer">
         <p><span class="disclamer">disclamer:</span> This is a tribute page from Brawlhalla game, I don't pretend any commercial use from this.</p>
     </footer>
+    <script src="./assets/js/index.js"></script>
 </body>
 </html>
