Change the color palette and layout

--- a/index.html
+++ b/index.html
@@ -9,17 +9,19 @@
 <link href="https://fonts.googleapis.com/css2?family=EB+Garamond&family=Oswald:wght@500&display=swap" rel="stylesheet">
 <body>
     <header class="header">
-        <h1>Brawlhalla Gallery</h1>
+        <h1>Brawlhalla</h1>
         <h3>Found a nice tribute gallery for my fav characters</h3>
+        <img class="logo" src="/assets/images/logo.png" alt="logo">
+        <h2> Fan Gallery</h2>
     </header>
     <main class="base">
         <div class="container">
-            <div class="modal" id="modal">
+            <!-- <div class="modal" id="modal">
                 <span class="cerrar">X</span>
                 <img src="./assets/images/Fait.png" alt="" id="imgModal" class="modal-content">
-            </div>
+            </div> -->
             <div id="artemis" class="polaroid artemis">
-                <img src="./assets/images/Artemis.png" alt="Artemis char">
+                <img id="artemisImg" src="./assets/images/Artemis.png" alt="Artemis char">
                 <p>This is a nice Artemis</p>
             </div>
             <div id="azoth" class="polaroid azoth">
@@ -32,7 +34,7 @@
             </div>
             <div id="wu" class="polaroid wu">
                 <img src="./assets/images/Wu-Shang.png" alt="Wu char">
-                <p>A monk who doesn't wnat to be bothered</p>
+                <p>A monk who doesn't want to be bothered</p>
             </div>
             <div id="yumiko" class="polaroid yumiko">
                 <img src="./assets/images/Yumiko.png" alt="Yumiko">
@@ -41,6 +43,7 @@
         </div>
     </main>
     <footer class="footer">
+        <img class="logo" src="/assets/images/logo.png" alt="">
         <p><span class="disclamer">disclamer:</span> This is a tribute page from Brawlhalla game, I don't pretend any commercial use from this.</p>
     </footer>
     <script src="./assets/js/index.js"></script>
