add the cdn for images

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header class="header">
         <h1>Brawlhalla</h1>
         <h3>Found a nice tribute gallery for my fav characters</h3>
-        <img class="logo" src="/assets/images/logo.png" alt="logo">
+        <img class="logo" src="https://raw.githubusercontent.com/ProgrammerDwarf/brawlhalla-tribute/master/assets/images/logo.png" alt="logo">
         <h2> Fan Gallery</h2>
     </header>
     <main class="base">
@@ -43,7 +43,7 @@
         </div>
     </main>
     <footer class="footer">
-        <img class="logo" src="/assets/images/logo.png" alt="">
+        <img class="logo" src="https://raw.githubusercontent.com/ProgrammerDwarf/brawlhalla-tribute/master/assets/images/logo.png" alt="">
         <p><span class="disclamer">disclamer:</span> This is a tribute page from Brawlhalla game, I don't pretend any commercial use from this.</p>
     </footer>
     <script src="./assets/js/index.js"></script>
