--- a/index.html
+++ b/index.html
@@ -16,28 +16,28 @@
     </header>
     <main class="base">
         <div class="container">
-            <!-- <div class="modal" id="modal">
+            <div class="modal" id="modal">
                 <span class="cerrar">X</span>
-                <img src="./assets/images/Fait.png" alt="" id="imgModal" class="modal-content">
-            </div> -->
-            <div id="artemis" class="polaroid artemis">
-                <img id="artemisImg" src="./assets/images/Artemis.png" alt="Artemis char">
+                <img src="" alt="" id="imgModal" class="modal-content">
+            </div>
+            <div id="artemisImg" class="polaroid artemis">
+                <img id="artemis" src="./assets/images/Artemis.png" alt="Artemis char">
                 <p>This is a nice Artemis</p>
             </div>
-            <div id="azoth" class="polaroid azoth">
-                <img src="./assets/images/Azoth.png" alt="Azoth char">
+            <div id="azothImg" class="polaroid azoth">
+                <img id="azoth" src="./assets/images/Azoth.png" alt="Azoth char">
                 <p>What about a ripper on steroids?</p>
             </div>
-            <div id="faith" class="polaroid faith">
-                <img src="./assets/images/Fait.png" alt="Fait char">
+            <div id="faithImg" class="polaroid faith">
+                <img id="faith" src="./assets/images/Fait.png" alt="Fait char">
                 <p>A cool and cute witch</p>
             </div>
-            <div id="wu" class="polaroid wu">
-                <img src="./assets/images/Wu-Shang.png" alt="Wu char">
+            <div id="wuImg" class="polaroid wu">
+                <img id="wu" src="./assets/images/Wu-Shang.png" alt="Wu char">
                 <p>A monk who doesn't want to be bothered</p>
             </div>
-            <div id="yumiko" class="polaroid yumiko">
-                <img src="./assets/images/Yumiko.png" alt="Yumiko">
+            <div id="yumikoImg" class="polaroid yumiko">
+                <img id="yumiko" src="./assets/images/Yumiko.png" alt="Yumiko">
                 <p>This is a pretty foxy legend</p>
             </div>
         </div>
@@ -46,6 +46,7 @@
         <img class="logo" src="https://raw.githubusercontent.com/ProgrammerDwarf/brawlhalla-tribute/master/assets/images/logo.png" alt="">
         <p><span class="disclamer">disclamer:</span> This is a tribute page from Brawlhalla game, I don't pretend any commercial use from this.</p>
     </footer>
-    <script src="./assets/js/index.js"></script>
+    <script src="./assets/js/jquery.js"></script>
+    <script src="./assets/js/script.js"></script>
 </body>
 </html>
