Change the urls from the image to an CDN

--- a/index.html
+++ b/index.html
@@ -21,23 +21,23 @@
                 <img src="" alt="" id="imgModal" class="modal-content">
             </div>
             <div id="artemisImg" class="polaroid artemis">
-                <img id="artemis" src="./assets/images/Artemis.png" alt="Artemis char">
+                <img id="artemis" src="https://raw.githubusercontent.com/ProgrammerDwarf/brawlhalla-tribute/master/assets/images/Artemis.png" alt="Artemis char">
                 <p>This is a nice Artemis</p>
             </div>
             <div id="azothImg" class="polaroid azoth">
-                <img id="azoth" src="./assets/images/Azoth.png" alt="Azoth char">
+                <img id="azoth" src="https://raw.githubusercontent.com/ProgrammerDwarf/brawlhalla-tribute/master/assets/images/Azoth.png" alt="Azoth char">
                 <p>What about a ripper on steroids?</p>
             </div>
             <div id="faithImg" class="polaroid faith">
-                <img id="faith" src="./assets/images/Fait.png" alt="Fait char">
+                <img id="faith" src="https://raw.githubusercontent.com/ProgrammerDwarf/brawlhalla-tribute/master/assets/images/Fait.png" alt="Fait char">
                 <p>A cool and cute witch</p>
             </div>
             <div id="wuImg" class="polaroid wu">
-                <img id="wu" src="./assets/images/Wu-Shang.png" alt="Wu char">
+                <img id="wu" src="https://raw.githubusercontent.com/ProgrammerDwarf/brawlhalla-tribute/master/assets/images/Wu-Shang.png" alt="Wu char">
                 <p>A monk who doesn't want to be bothered</p>
             </div>
             <div id="yumikoImg" class="polaroid yumiko">
-                <img id="yumiko" src="./assets/images/Yumiko.png" alt="Yumiko">
+                <img id="yumiko" src="https://raw.githubusercontent.com/ProgrammerDwarf/brawlhalla-tribute/master/assets/images/Yumiko.png" alt="Yumiko">
                 <p>This is a pretty foxy legend</p>
             </div>
         </div>
